<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/sign_up_teacher"
    tools:context=".register">

    <TextView
        android:text="@string/SignupT"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterSubject" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/classname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterClass" />

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:id="@+id/collegeid"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/college_id" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:text="@string/Signup"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="italic"
        android:id="@+id/loginNow"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/click_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>