<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/background_all"
    tools:context=".MainStudent">

    <TextView
        android:text="@string/attendance_details"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/subj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterSubject" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_getsub"
        android:layout_width="wrap_content"
        android:text="@string/get_data"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ssub"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subject" />
    <TextView
        android:id="@+id/spres"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Present" />
    <TextView
        android:id="@+id/stot"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Classes" />

<!--    <TextView-->
<!--        android:textStyle="italic"-->
<!--        android:id="@+id/getdet"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_margin="20dp"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/get_data"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

</LinearLayout>